welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:5: error: not found: value couleur
  couleur=getCouleurSol
  ^